src/test/deca/syntax/valid/Objet/Extended_class.deca
// Description:
//    test de l'héritage d'une classe
//
// Resultats:
//   
//
// Historique:
//    cree le 19/01/2022

class A {
    
}

class B extends A{
    
}

